--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "backend-app",
+  "name": "todo-app-backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "Backend for AWS To-Do App",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "aws-sdk": "^2.1238.0",
+    "aws-sdk": "^2.1239.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.5.1"
+    "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.2.0",
+    "sequelize": "^6.31.1",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
