--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,24 @@
-FROM node:16-alpine
-WORKDIR /app
+# Use official Node.js image as base
+FROM node:18-alpine
+
+# Create app directory
+WORKDIR /usr/src/app
+
+# Copy package files
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
+
+# Copy application source
 COPY . .
+
+# Environment variables (you can also pass these at runtime)
+ENV NODE_ENV=production
+ENV PORT=5000
+
+# Expose the application port
 EXPOSE 5000
-CMD ["node", "app.js"]
+
+# Command to run the application
+CMD ["node", "server.js"]
