--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,24 +1,10 @@
-# Use official Node.js image as base
-FROM node:18-alpine
+# Use Node LTS
+FROM node:18
 
-# Create app directory
-WORKDIR /usr/src/app
-
-# Copy package files
+WORKDIR /app
 COPY package*.json ./
-
-# Install dependencies
 RUN npm install
-
-# Copy application source
 COPY . .
 
-# Environment variables (you can also pass these at runtime)
-ENV NODE_ENV=production
-ENV PORT=5000
-
-# Expose the application port
 EXPOSE 5000
-
-# Command to run the application
-CMD ["node", "server.js"]
+CMD ["node", "app.js"]
