--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,27 @@
 {
-    "name": "cloud-todo-backend",
-    "version": "1.0.0",
-    "main": "app.js",
-    "scripts": {
-      "start": "node app.js"
-    },
-    "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "cookie-parser": "^1.4.6",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "express-session": "^1.17.3",
-      "jsonwebtoken": "^9.0.0",
-      "multer": "^1.4.4",
-      "mysql2": "^3.6.0",
-      "aws-sdk": "^2.1482.0"
-    }
+  "name": "aws-crud-backend",
+  "version": "1.0.0",
+  "description": "Node.js backend for AWS CRUD application",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1235.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
-  
+}
