--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 backend/.env
-node_modules/
-frontend/node_modules/
+frontend/node_modules
+backend/node_modules/
 commands.txt
 umair-todo-app-key.pem
